updated pom for fx dependencies